# 09_LLM-Project-Study

./: .gitignore  main.py  pyproject.toml
src/: 01_llm_exercise.ipynb  02_stt_tts.ipynb  03_Ollama.ipynb  04_huggingface_datasets.ipynb  05_test.json  06_huggingface_models.ipynb  07_huggingface_finetuning.ipynb
